k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-site
  labels:
    app: personal-site
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30000
    protocol: TCP
    name: http
  selector:
    app: personal-site
